--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#a6b727</color>
+    <color name="colorPrimaryDark">#827717</color>
+    <color name="colorAccent">#a6b727</color>
+    <color name="highlighted_text_material">#66b6d7a8</color>
+    <color name="help_background">#ffd180</color>
+    <color name="nohelp_background">#c3b0b0</color>
+    <color name="reds">#f44336</color>
 </resources>
