--- a/app/src/main/res/layout/mainpage_activity.xml
+++ b/app/src/main/res/layout/mainpage_activity.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
+
         <include
-        android:id="@+id/tool_bar"
-        layout="@layout/toolbar"/>
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/tool_bar"
+            layout="@layout/toolbar"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/dailyRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tool_bar">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -30,5 +36,4 @@
             android:theme="@style/MyFloatingButton"
             android:onClick="createHelpClick"/>
 
-
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
