--- a/app/src/main/res/layout/user_request_activity.xml
+++ b/app/src/main/res/layout/user_request_activity.xml
@@ -7,6 +7,10 @@
         android:id="@+id/tool_bar"
         layout="@layout/toolbar"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/deneme" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/helpRequestRecyler"
